Added results discussion and process to notebook

--- a/Notebooks/MajorLeagues.ipynb
+++ b/Notebooks/MajorLeagues.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove date, season, neutral, and result1 columns"
+    "Remove the date, season, neutral, and result1 columns as these will not be considered when performing regression."
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove any rows with missing data"
+    "Remove any rows with missing data so that missing data does not ne"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transform the team names into numeric data for use in regression"
+    "Transform the team names from categorical data to numeric data to "
    ]
   },
   {
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create features and labels"
+    "Create the features and labels for regression. Features include attributes from the table except for the result we want. Features for team 1 include: playoff, team1, team2, elo1, elo2, and elo_prob1. Even though we are trying to predict team1's score, we do not include team2's score in the feature set because the scores of either team are independent of each other. The label is the result we want from the regression and for this iteration it is score1."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Split the data into training and test sets"
+    "Split the labels and features into testing and training sets. The training sets will be used to train the regressor and the testing sets will be used to test the accuracy of the predictions that the regressor makes. For this project I chose to use a ratio of 80/20; 80% of the data is used for training the regressor and 20% of the data is used for testing the regressor."
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a Random Forest Regressor"
+    "Create the regressor. For this project, I decided to try a Random Forest Regression because they are known for being fast and accurate. I used Scikit Learn's RandomForestRegressor() to implement my random forest and used 500 trees. I let the method auto-decide the number of features to use for each of the trees."
    ]
   },
   {
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train the regressor and predict the scores"
+    "Train the Random Forest Regressor and predict the scores for team1. I trained the regressor using the training sets I created above. Once the regressor was trained, I used the test features set to try to predict team1's scores correctly."
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the average score prediction errors for team 1"
+    "Calculate the average score prediction errors for team1. To test the regressor's accuracy, I did a difference comparison between the score predictions from the regressor and what the actual scores were from the scores test set. To do this, I simply took the differrence between the predicted score and the actual score for each test case, then took the mean of the differences."
    ]
   },
   {
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create features and labels"
+    "Create the features and labels for regression. Features include attributes from the table except for the result we want. Features for team 1 include: playoff, team1, team2, elo1, elo2, and elo_prob1. Even though we are trying to predict team2's score, we do not include team1's score in the feature set because the scores of either team are independent of each other. The label is the result we want from the regression and for this iteration it is score1."
    ]
   },
   {
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Split the data into training and test sets"
+    "Split the labels and features into testing and training sets. The training sets will be used to train the regressor and the testing sets will be used to test the accuracy of the predictions that the regressor makes. For this project I chose to use a ratio of 80/20; 80% of the data is used for training the regressor and 20% of the data is used for testing the regressor."
    ]
   },
   {
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a Random Forest Regressor"
+    "Create the regressor. For this project, I decided to try a Random Forest Regression because they are known for being fast and accurate. I used Scikit Learn's RandomForestRegressor() to implement my random forest and used 500 trees. I let the method auto-decide the number of features to use for each of the trees."
    ]
   },
   {
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Train the regressor and predict the scores"
+    "Train the Random Forest Regressor and predict the scores for team2. I trained the regressor using the training sets I created above. Once the regressor was trained, I used the test features set to try to predict team2's scores correctly."
    ]
   },
   {
@@ -285,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the average score prediction errors for team 2"
+    "Calculate the average score prediction errors for team2. To test the regressor's accuracy, I did a difference comparison between the score predictions from the regressor and what the actual scores were from the scores test set. To do this, I simply took the differrence between the predicted score and the actual score for each test case, then took the mean of the differences."
    ]
   },
   {
@@ -305,6 +305,34 @@
     "err = [ ( y_predict[ i ] - r ) for i, r in enumerate( y_test ) ]\n",
     "avg_err = np.mean( err )\n",
     "print( 'Average Team 2 Prediction Error: {0:.5f} points'.format( avg_err ) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using a Random Forest Regressor with 500 trees, I was able to correctly predict the scores of team1 within an average of 0.02429 points and correctly predict the scores of team2 within an average of -0.08702 points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the Random Forest Regressor appeared to be very accurate. On average, the random forest regressor was within less than a point of the acutal score of any given team at any given matchup. The positive-valued errors represent an over-prediction by the regressor (the regressor predicted a score higher than what wasactually scored) and negative-valued errors represent an under-prediction by the regressor (the regressor predicted a score lower than what was acutally scored)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To improve upon the accuracy of the regressor, one thing that could be easily adjusted would be the number of trees used in the random forest regressor. Other things that could be used to potentially improve the accuracy would be to see if the date and the season data actually does affect the number of points a team scores."
    ]
   }
  ],
