--- a/Notebooks/MajorLeagues.ipynb
+++ b/Notebooks/MajorLeagues.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove any rows with missing data so that missing data does not ne"
+    "Remove any rows with missing data so that missing data does not negatively affect regression"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transform the team names from categorical data to numeric data to "
+    "Transform the team names from categorical data to numeric data to be able to use the team names in regression."
    ]
   },
   {
@@ -209,7 +209,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Predict scores for team 2"
