Forgot a period and it was bothering me

--- a/Notebooks/MajorLeagues.ipynb
+++ b/Notebooks/MajorLeagues.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove any rows with missing data so that missing data does not negatively affect regression"
+    "Remove any rows with missing data so that missing data does not negatively affect regression."
    ]
   },
   {
